--- a/index.html
+++ b/index.html
@@ -11,184 +11,229 @@
     <link rel="shortcut icon" href="" type="image/x-icon">
 
     <!-- font awesome cdn -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- google font || Inter-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-        rel="stylesheet">
+    <!-- google font || Inter -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
     <!-- daisyui & tailwindcss cdn -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
-    <!-- css -stylesheet -->
+    <!-- css -->
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        * {
-            font-family: "Inter", sans-serif;
-        }
-    </style>
+
 </head>
 
-<body>
-    <!-- header part -->
-    <header class="bg-green-600 border-2 border-red-600">
-        <div class="flex justify-between items-center w-[1140px] mx-auto py-2 px-10 border-2 border-red-600">
+<body class="bg-[#f0fdf4]">
+    <!-- Header -->
+    <header class="bg-[#15803d]">
+        <div class="flex justify-between items-center w-[1140px] mx-auto py-3 px-10">
             <div>
-                <h1 class="text-[#FFFFFF] text-2xl font-bold">Green Earth</h1>
+                <h1 class="text-[#ffffff] text-2xl font-bold">Green Earth</h1>
             </div>
             <div>
-                <ul class="flex justify-between items-center gap-5 text-[#FFFFFF]">
+                <ul class="flex gap-5 text-[#ffffff] ">
                     <li><a href="">About</a></li>
                     <li><a href="">Gallery</a></li>
                     <li><a href="">Plant a Tree</a></li>
                 </ul>
             </div>
             <div>
-                <button class="yellow-btn bg text-green-600 rounded-full p-2 bg-yellow-500">Plant a tree</button>
+                <button class="bg-[#facc15] text-[#15803d] rounded-full px-4 py-2 font-semibold">Plant a Tree</button>
             </div>
         </div>
     </header>
 
-    <!-- banner part -->
+    <!-- Banner -->
     <section>
-        <div class="text-center m-15 w-[1140px] mx-auto border-2 border-red-600">
-            <h1 class="text-2xl font-bold">Plant a Tree, Grow a Future</h1>
-            <p>Join our mission to plant 1 million trees and make the Earth greener for future
-                generations.</p>
-            <button class="yellow-btn bg text-green-600 rounded-full p-2 bg-yellow-500">Plant a tree</button>
+        <div class="bg-[#cff0dc] banner-bg-img h-64">
+            <div class="text-center  w-[627px] mx-auto p-15">
+                <h1 class="text-[#1f2937] text-4xl font-bold mb-3">Plant a Tree, Grow a Future</h1>
+                <p class="text-[#1f2937] text-xs mb-4">Join our mission to plant 1 million trees and make the Earth
+                    greener for future generations.</p>
+                <button class="bg-[#facc15] text-[#15803d] rounded-full px-6 py-2 font-semibold">Get Involved</button>
+            </div>
+            <div>
+
+            </div>
         </div>
     </section>
 
-    <!-- Choose Your Trees -->
+    <!-- choose your trees -->
     <section>
-        <div>
-            <div class="w-[1140px] mx-auto border-2 border-red-600">
-                <h1 class="text-center text-2xl m-4 font-semibold">Choose Your Trees</h1>
-                <div class="flex gap-4 items-center">
-                    <!-- categories -->
-                    <div class="w-[12%] border-2 border-red-600">
-                        <h1 class="text-2xl font-bold">categories</h1>
-                        <ul>
-                            <li><a href="">Fruit Trees</a></li>
-                            <li><a href="">Flowering Trees</a></li>
-                            <li><a href="">Shade Trees</a></li>
-                            <li><a href="">Medicinal Trees</a></li>
-                            <li><a href="">Timber Trees</a></li>
-                            <li><a href="">Evergreen Trees</a></li>
-                            <li><a href="">Ornamental Plants</a></li>
-                            <li><a href="">Bamboo</a></li>
-                            <li><a href="">Climbers</a></li>
-                            <li><a href="">Aquatic Plants</a></li>
-                        </ul>
+        <div class="w-[1140px] mx-auto m-12">
+            <h1 class="text-[#1f2937] text-center text-2xl mb-6 font-semibold">Choose Your Trees</h1>
+            <div class="flex gap-4">
+                <!-- Categories -->
+                <div class="w-[15%]">
+                    <h2 class="text-[#000000] text-xl font-bold mb-2">Categories</h2>
+                    <ul class="space-y-1">
+                        <li><a class="text-[#ffffff] bg-[#15803d] block w-full px-1 py-1 rounded" href="">All Trees</a>
+                        </li>
+                        <li><a href="">Fruit Trees</a></li>
+                        <li><a href="">Flowering Trees</a></li>
+                        <li><a href="">Shade Trees</a></li>
+                        <li><a href="">Medicinal Trees</a></li>
+                        <li><a href="">Timber Trees</a></li>
+                        <li><a href="">Evergreen Trees</a></li>
+                        <li><a href="">Ornamental Plants</a></li>
+                        <li><a href="">Bamboo</a></li>
+                        <li><a href="">Climbers</a></li>
+                        <li><a href="">Aquatic Plants</a></li>
+                    </ul>
+                </div>
+
+                <!-- Cards -->
+                <div class="grid grid-cols-3 gap-4 w-[70%]">
+                    <!-- 1st card -->
+                    <div class="border p-4 rounded">
+                        <div class="bg-[#ededed]">
+                            <!-- <img class="w-full h-40 object-cover rounded bg-gray-200" src="" alt=""> -->
+                            <!-- <img class="w-full h-40 object-cover rounded bg-gray-200" src="" alt=""> -->
+                            <img class="w-full h-40 object-cover rounded bg-[#d1d5db]" alt="">
+
+
+                        </div>
+                        <h2 class="text-[#1f2937] text-lg font-bold mt-2">Mango Tree</h2>
+                        <p class="text-[#1f2937] text-sm">A fast-growing tropical tree that produces delicious mangoes
+                            in summer.</p>
+                        <div class="flex justify-between items-center mt-2">
+                            <span class="text-[#15803d] font-semibold">Fruit Tree</span>
+                            <span class="text-[#1f2937] text-xl font-bold">৳ 500</span>
+                        </div>
+                        <button type="button"
+                            class="mt-3 w-full bg-[#15803d] text-[#ffffff] py-2 rounded-full hover:bg-green-600">
+                            Add to Cart
+                        </button>
                     </div>
 
-                    <!-- card - 3col -->
-                    <div class="flex items-start flex-col-3 w-[72%] gap-2 border-2 border-red-600" >
-                        <!-- 1 card -->
-                        <div class="border-2 p-2">
-                            <img class="bg-gray-600 border-2" src="./assets/deal-ana.png" alt="">
-                            <h2 class="text-xl font-bold">Mango Tree</h2>
-                            <p class="text-xs">A fast-growing tropical tree that produces delicious, juicy mangoes during summer. Its dense green</p>
-                            <div class="flex justify-between">
-                                <a class="text-xl font-semibold" href="">Fruit Tree</a>
-                                <h3 class="text-xl font-semibold">৳ <span class="">500</span></h3>
-                            </div>
-                            <button class="text-xl font-bold text-center border-2 rounded-full w-full bg-green-500"">Add to Cart</button>
+                    <!-- 2nd card -->
+                    <div class="border p-4 rounded">
+                        <div class="bg-[#ededed]">
+                            <!-- <img class="w-full h-40 object-cover rounded bg-gray-200" src="" alt=""> -->
+                            <!-- <img class="w-full h-40 object-cover rounded bg-gray-200" src="" alt=""> -->
+                            <img class="w-full h-40 object-cover rounded bg-[#d1d5db]" alt="">
+
+
                         </div>
-                        <!-- 2 card -->
-                        <div class="border-2 p-2">
-                            <img class="bg-gray-600 border-2" src="./assets/deal-ana.png" alt="">
-                            <h2 class="text-xl font-bold">Mango Tree</h2>
-                            <p class="text-xs">A fast-growing tropical tree that produces delicious, juicy mangoes during summer. Its dense green</p>
-                            <div class="flex justify-between">
-                                <a class="text-xl font-semibold" href="">Fruit Tree</a>
-                                <h3 class="text-xl font-semibold">৳ <span class="">500</span></h3>
-                            </div>
-                            <button class="text-xl font-bold text-center border-2 rounded-full w-full bg-green-500"">Add to Cart</button>
+                        <h2 class="text-[#1f2937] text-lg font-bold mt-2">Mango Tree</h2>
+                        <p class="text-[#1f2937] text-sm">A fast-growing tropical tree that produces delicious mangoes
+                            in summer.</p>
+                        <div class="flex justify-between items-center mt-2">
+                            <span class="text-[#15803d] font-semibold">Fruit Tree</span>
+                            <span class="text-[#1f2937] text-xl font-bold">৳ 500</span>
                         </div>
-                        <!-- 3 card -->
-                        <div class="border-2 p-2">
-                            <img class="bg-gray-600 border-2" src="./assets/deal-ana.png" alt="">
-                            <h2 class="text-xl font-bold">Mango Tree</h2>
-                            <p class="text-xs">A fast-growing tropical tree that produces delicious, juicy mangoes during summer. Its dense green</p>
-                            <div class="flex justify-between">
-                                <a class="text-xl font-semibold" href="">Fruit Tree</a>
-                                <h3 class="text-xl font-semibold">৳ <span class="">500</span></h3>
-                            </div>
-                            <button class="text-xl font-bold text-center border-2 rounded-full w-full bg-green-500">Add to Cart</button>
-                        </div>
+                        <button type="button"
+                            class="mt-3 w-full bg-[#15803d] text-[#ffffff] py-2 rounded-full hover:bg-green-600">
+                            Add to Cart
+                        </button>
                     </div>
 
-                    <!-- cart history -->
-                    <div class="w-[12%] border-2 border-red-600">
-                        <h2 class="text-2xl font-bold ">Your Cart</h2>
+                    <!-- 3rd card -->
+                    <div class="border p-4 rounded">
+                        <div class="bg-[#ededed]">
+                            <!-- <img class="w-full h-40 object-cover rounded bg-gray-200" src="" alt=""> -->
+                            <!-- <img class="w-full h-40 object-cover rounded bg-gray-200" src="" alt=""> -->
+                            <img class="w-full h-40 object-cover rounded bg-[#d1d5db]" alt="">
+
+
+                        </div>
+                        <h2 class="text-[#1f2937] text-lg font-bold mt-2">Mango Tree</h2>
+                        <p class="text-[#1f2937] text-sm">A fast-growing tropical tree that produces delicious mangoes
+                            in summer.</p>
+                        <div class="flex justify-between items-center mt-2">
+                            <span class="text-[#15803d] font-semibold">Fruit Tree</span>
+                            <span class="text-[#1f2937] text-xl font-bold">৳ 500</span>
+                        </div>
+                        <button type="button"
+                            class="mt-3 w-full bg-[#15803d] text-[#ffffff] py-2 rounded-full hover:bg-green-600">
+                            Add to Cart
+                        </button>
                     </div>
+
+                </div>
+
+                <!-- Cart -->
+                <div class="w-[15%]">
+                    <h2 class="text-[#000000] text-xl font-bold mb-2">Your Cart</h2>
+                    <p class="text-sm text-gray-600">InnerHTML</p>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- about the campaign -->
-     <section>
-        <div class="w-[800px] mx-auto m-10 border-2 border-red-600">
-            <h1 class="text-center">About The Campaign</h1>
-            <div class="flex justify-between items-center gap-5">
-                <div>
+    <section>
+        <div class="w-[600px] mx-auto m-10">
+            <h1 class="text-center text-xl font-bold mb-4">About the Campaign</h1>
+            <div class="flex gap-5 items-center ">
+                <div class="w-1/2">
                     <img src="./assets/about.png" alt="about">
                 </div>
 
-                <div>
-                    <p>Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.</p>
-                    <ol>
+                <div class="w-1/2">
+                    <p class="text-[#1f2937] text-xs mb-3">Green Earth is a global tree plantation initiative. We have
+                        already planted over 500,000 trees worldwide. By joining us, you help restore forests, create
+                        habitats for wildlife, and fight climate change.</p>
+                    <ul class="list-disc pl-5 text-[#1f2937] text-xs">
                         <li>Restoration of natural habitats</li>
                         <li>Improvement of air quality</li>
                         <li>Support for local communities</li>
-                    </ol>
+                    </ul>
                 </div>
             </div>
         </div>
-     </section>
+    </section>
 
-     <!-- impact -->
-      <section>
-        <div class="m-10 max-w-[600px] mx-auto border-2 border-red-600">
-            <h1 class="text-2xl font-bold text-center ">Our Impact</h1>
-            <div class="flex justify-between items-center">
-                <div>
-                    <h1><span>500</span>K+</h1>
-                    <p>Trees Planted</p>
-                </div>
-                <div>
-                    <h1><span>120</span>+</h1>
-                    <p>Communities Involved</p>
-                </div>
-                <div>
-                    <h1><span>30</span></h1>
-                    <p>Countries Reached</p>
+    <!-- Impact -->
+    <section>
+        <div class="bg-[#cff0dc]">
+            <div class="w-[1140px] mx-auto mt-10 py-15 text-center">
+                <h1 class="text-[#1f2937] text-2xl font-bold mb-4">Our Impact</h1>
+                <div class="flex justify-between gap-10">
+                    <div class="bg-[#ffffff] w-full text-[#15803d] py-5 rounded-lg">
+                        <h2 class="text-2xl font-bold">500K+</h2>
+                        <p class="text-[#1f2937] text-xs p-2">Trees Planted</p>
+                    </div>
+                    <div class="bg-[#ffffff] w-full text-[#15803d] py-5 rounded-lg">
+                        <h2 class="text-2xl font-bold">120+</h2>
+                        <p class="text-[#1f2937] text-xs p-2">Communities Involved</p>
+                    </div>
+                    <div class="bg-[#ffffff] w-full text-[#15803d] py-5 rounded-lg">
+                        <h2 class="text-2xl font-bold">30+</h2>
+                        <p class="text-[#1f2937] text-xs p-2">Countries Reached</p>
+                    </div>
                 </div>
             </div>
         </div>
-      </section>
+    </section>
 
-      <!-- Form -->
+    <!-- Form -->
+    <section>
+        <div class="bg-[#166534]">
+            <div class="w-[400px] mx-auto py-8 rounded">
+                <h1 class="text-xl font-bold text-center mb-3">Plant a Tree Today</h1>
+                <div class="bg-[#15803d] p-5 rounded-md shadow-md">
+                    <form action="" method="post" class="text-center">
+                    <input type="text" placeholder="Enter Your Name" class="p-1 rounded-lg w-full mb-2 bg-[#ffffff] shadow-md border-none"><br>
+                    <input type="email" placeholder="Enter Your Email" class="p-1 rounded-lg w-full mb-2 bg-[#ffffff] shadow-md border-none"><br>
+                    <input type="number" placeholder="Number of Trees" class="p-1 rounded-lg w-full mb-2 bg-[#ffffff] shadow-md border-none"><br>
+                    <button type="submit"
+                        class="text-xs font-bold border rounded-full w-full bg-yellow-500 py-2 hover:bg-yellow-600 border-none">
+                        Donate Now
+                    </button>
+                </form>
+                </div>
+            </div>
 
-      <section>
-        <div class="border-2 border-red-600 m-15 max-w-[400px] mx-auto">
-            <h1 class="text-xl font-bold text-center">Plant a Tree Today</h1>
-            <form class="text-center max-w-[100%]"  action="">
-                <input type="text" placeholder="Enter Your Name"> <br>
-                <input type="email" placeholder="Enter Your Email"> <br>
-                <input type="text" placeholder="Number of Trees">
-                <button class="text-xl font-bold border-2 rounded-full w-full bg-yellow-500">Donate Now</button>
-            </form>
+            <!-- copyright -->
+             <div class="bg-[#14532d]">
+                <p class="text-xs text-[#ffffff] font-medium text-center py-4">© 2025 Green Earth. All Rights Reserved.</p>
+             </div>
         </div>
-      </section>
+    </section>
 
 </body>
 
