--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                         </div>
                         <h2 class="text-[#1f2937] text-lg font-bold mt-2">Mango Tree</h2>
-                        <p class="text-[#1f2937] text-sm">A fast-growing tropical tree that produces delicious mangoes
+                        <p class="text-[#1f2937] text-xs">A fast-growing tropical tree that produces delicious mangoes
                             in summer.</p>
                         <div class="flex justify-between items-center mt-2">
                             <span class="text-[#15803d] font-semibold">Fruit Tree</span>
@@ -119,7 +119,7 @@
 
                         </div>
                         <h2 class="text-[#1f2937] text-lg font-bold mt-2">Mango Tree</h2>
-                        <p class="text-[#1f2937] text-sm">A fast-growing tropical tree that produces delicious mangoes
+                        <p class="text-[#1f2937] text-xs">A fast-growing tropical tree that produces delicious mangoes
                             in summer.</p>
                         <div class="flex justify-between items-center mt-2">
                             <span class="text-[#15803d] font-semibold">Fruit Tree</span>
@@ -141,7 +141,7 @@
 
                         </div>
                         <h2 class="text-[#1f2937] text-lg font-bold mt-2">Mango Tree</h2>
-                        <p class="text-[#1f2937] text-sm">A fast-growing tropical tree that produces delicious mangoes
+                        <p class="text-[#1f2937] text-xs">A fast-growing tropical tree that produces delicious mangoes
                             in summer.</p>
                         <div class="flex justify-between items-center mt-2">
                             <span class="text-[#15803d] font-semibold">Fruit Tree</span>
@@ -187,7 +187,7 @@
         </div>
     </section>
 
-    <!-- Impact -->
+    <!-- Impact part-->
     <section>
         <div class="bg-[#cff0dc]">
             <div class="w-[1140px] mx-auto mt-10 py-15 text-center">
@@ -210,31 +210,35 @@
         </div>
     </section>
 
-    <!-- Form -->
+    <!-- Form and copyright-->
+
     <section>
         <div class="bg-[#166534]">
             <div class="w-[400px] mx-auto py-8 rounded">
                 <h1 class="text-xl font-bold text-center mb-3">Plant a Tree Today</h1>
                 <div class="bg-[#15803d] p-5 rounded-md shadow-md">
                     <form action="" method="post" class="text-center">
-                    <input type="text" placeholder="Enter Your Name" class="p-1 rounded-lg w-full mb-2 bg-[#ffffff] shadow-md border-none"><br>
-                    <input type="email" placeholder="Enter Your Email" class="p-1 rounded-lg w-full mb-2 bg-[#ffffff] shadow-md border-none"><br>
-                    <input type="number" placeholder="Number of Trees" class="p-1 rounded-lg w-full mb-2 bg-[#ffffff] shadow-md border-none"><br>
-                    <button type="submit"
-                        class="text-xs font-bold border rounded-full w-full bg-yellow-500 py-2 hover:bg-yellow-600 border-none">
-                        Donate Now
-                    </button>
-                </form>
+                        <input type="text" placeholder="Enter Your Name"
+                            class="p-1 rounded-lg w-full mb-2 bg-[#ffffff] shadow-md border-none"><br>
+                        <input type="email" placeholder="Enter Your Email"
+                            class="p-1 rounded-lg w-full mb-2 bg-[#ffffff] shadow-md border-none"><br>
+                        <input type="number" placeholder="Number of Trees"
+                            class="p-1 rounded-lg w-full mb-2 bg-[#ffffff] shadow-md border-none"><br>
+                        <button type="submit"
+                            class="text-xs font-bold border rounded-full w-full bg-yellow-500 py-2 hover:bg-yellow-600 border-none">
+                            Donate Now
+                        </button>
+                    </form>
                 </div>
             </div>
 
             <!-- copyright -->
-             <div class="bg-[#14532d]">
-                <p class="text-xs text-[#ffffff] font-medium text-center py-4">© 2025 Green Earth. All Rights Reserved.</p>
-             </div>
+            <div class="bg-[#14532d]">
+                <p class="text-xs text-[#ffffff] font-medium text-center py-4">© 2025 Green Earth. All Rights Reserved.
+                </p>
+            </div>
         </div>
     </section>
-
 </body>
 
 </html>
