--- a/index.html
+++ b/index.html
@@ -48,18 +48,32 @@
 
     <!-- Banner -->
     <section>
-        <div class="bg-[#cff0dc] banner-bg-img h-64">
-            <div class="text-center  w-[627px] mx-auto p-15">
-                <h1 class="text-[#1f2937] text-4xl font-bold mb-3">Plant a Tree, Grow a Future</h1>
-                <p class="text-[#1f2937] text-xs mb-4">Join our mission to plant 1 million trees and make the Earth
-                    greener for future generations.</p>
-                <button class="bg-[#facc15] text-[#15803d] rounded-full px-6 py-2 font-semibold">Get Involved</button>
-            </div>
-            <div>
+ <section>
+  <div 
+    class="h-64 bg-[#cff0dc] 
+           bg-[url('../assets/hero-leaf1.png'),url('../assets/hero-leaf2.png')] 
+           bg-no-repeat 
+           bg-[position:top_left,top_right] 
+           bg-[length:300px_280px,300px_254px] 
+           flex items-center">
 
-            </div>
-        </div>
-    </section>
+    <div class="text-center max-w-lg mx-auto px-4">
+      <h1 class="text-[#1f2937] text-2xl md:text-4xl font-bold mb-3">
+        Plant a Tree, Grow a Future
+      </h1>
+      <p class="text-[#1f2937] text-xs md:text-sm mb-4">
+        Join our mission to plant 1 million trees and make the Earth greener for future generations.
+      </p>
+      <button class="bg-[#facc15] text-[#15803d] rounded-full px-6 py-2 font-semibold">
+        Get Involved
+      </button>
+    </div>
+
+  </div>
+</section>
+
+</section>
+
 
     <!-- choose your trees -->
     <section>
