--- a/index.html
+++ b/index.html
@@ -21,71 +21,81 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
-    <!-- css -->
-    <link rel="stylesheet" href="css/style.css">
+    <style>
+        * {
+            font-family: "Inter", sans-serif;
+        }
+    </style>
 
 </head>
 
 <body class="bg-[#f0fdf4]">
+
     <!-- Header -->
-    <header class="bg-[#15803d]">
-        <div class="flex justify-between items-center w-[1140px] mx-auto py-3 px-10">
-            <div>
-                <h1 class="text-[#ffffff] text-2xl font-bold">Green Earth</h1>
-            </div>
-            <div>
-                <ul class="flex gap-5 text-[#ffffff] ">
-                    <li><a href="">About</a></li>
-                    <li><a href="">Gallery</a></li>
-                    <li><a href="">Plant a Tree</a></li>
-                </ul>
-            </div>
-            <div>
-                <button class="bg-[#facc15] text-[#15803d] rounded-full px-4 py-2 font-semibold">Plant a Tree</button>
-            </div>
-        </div>
-    </header>
+<header class="bg-[#15803d]">
+  <div class="max-w-[1140px] mx-auto px-4 py-3">
+    <div class="flex flex-col md:flex-row md:justify-between md:items-center">
+      
+      <!-- Logo -->
+      <div class="text-center md:text-left mb-2 md:mb-0">
+        <h1 class="text-white text-2xl font-bold">Green Earth</h1>
+      </div>
+
+      <!-- Menu -->
+      <ul class="flex flex-col md:flex-row gap-3 md:gap-5 text-white items-center text-center">
+        <li><a href="">About</a></li>
+        <li><a href="">Gallery</a></li>
+        <li><a href="">Plant a Tree</a></li>
+      </ul>
+
+      <!-- Button -->
+      <div class="mt-3 md:mt-0 text-center md:text-right">
+        <button class="bg-[#facc15] text-[#15803d] rounded-full px-4 py-2 font-semibold">
+          Plant a Tree
+        </button>
+      </div>
+
+    </div>
+  </div>
+</header>
 
     <!-- Banner -->
-    <section>
- <section>
-  <div 
-    class="h-64 bg-[#cff0dc] 
-           bg-[url('../assets/hero-leaf1.png'),url('../assets/hero-leaf2.png')] 
-           bg-no-repeat 
-           bg-[position:top_left,top_right] 
-           bg-[length:300px_280px,300px_254px] 
-           flex items-center">
-
-    <div class="text-center max-w-lg mx-auto px-4">
-      <h1 class="text-[#1f2937] text-2xl md:text-4xl font-bold mb-3">
-        Plant a Tree, Grow a Future
-      </h1>
-      <p class="text-[#1f2937] text-xs md:text-sm mb-4">
-        Join our mission to plant 1 million trees and make the Earth greener for future generations.
-      </p>
-      <button class="bg-[#facc15] text-[#15803d] rounded-full px-6 py-2 font-semibold">
-        Get Involved
-      </button>
+<section>
+    <div 
+        class="h-64 md:h-80 flex items-center justify-center px-4 text-center
+               bg-[#cff0dc] 
+               bg-none 
+               md:bg-[url('../assets/hero-leaf1.png'),url('../assets/hero-leaf2.png')] 
+               md:bg-no-repeat 
+               md:bg-[position:top_left,top_right] 
+               md:bg-[length:300px_320px,300px_320px]">
+        <div class="max-w-lg">
+            <h1 class="text-[#1f2937] text-2xl md:text-4xl font-bold mb-3">
+                Plant a Tree, Grow a Future
+            </h1>
+            <p class="text-[#1f2937] text-xs md:text-sm mb-4">
+                Join our mission to plant 1 million trees and make the Earth greener for future generations.
+            </p>
+            <button class="bg-[#facc15] text-[#15803d] rounded-full px-6 py-2 font-semibold">
+                Get Involved
+            </button>
+        </div>
     </div>
-
-  </div>
 </section>
 
-</section>
+
 
 
     <!-- choose your trees -->
     <section>
-        <div class="w-[1140px] mx-auto m-12">
+        <div class="w-[90%] md:w-[1140px] mx-auto my-12">
             <h1 class="text-[#1f2937] text-center text-2xl mb-6 font-semibold">Choose Your Trees</h1>
-            <div class="flex gap-4">
+            <div class="flex flex-col md:flex-row gap-4">
                 <!-- Categories -->
-                <div class="w-[15%]">
-                    <h2 class="text-[#000000] text-xl font-bold mb-2">Categories</h2>
-                    <ul class="space-y-1">
-                        <li><a class="text-[#ffffff] bg-[#15803d] block w-full px-1 py-1 rounded" href="">All Trees</a>
-                        </li>
+                <div class="w-full md:w-1/6">
+                    <h2 class="text-[#000000] text-xl font-bold mb-2 text-center md:text-left">Categories</h2>
+                    <ul class="space-y-1 text-center md:text-left">
+                        <li><a class="text-[#ffffff] bg-[#15803d] block w-full px-1 py-1 rounded" href="">All Trees</a></li>
                         <li><a href="">Fruit Trees</a></li>
                         <li><a href="">Flowering Trees</a></li>
                         <li><a href="">Shade Trees</a></li>
@@ -100,15 +110,11 @@
                 </div>
 
                 <!-- Cards -->
-                <div class="grid grid-cols-3 gap-4 w-[70%]">
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 w-full md:w-7/12">
                     <!-- 1st card -->
                     <div class="border p-4 rounded">
                         <div class="bg-[#ededed]">
-                            <!-- <img class="w-full h-40 object-cover rounded bg-gray-200" src="" alt=""> -->
-                            <!-- <img class="w-full h-40 object-cover rounded bg-gray-200" src="" alt=""> -->
                             <img class="w-full h-40 object-cover rounded bg-[#d1d5db]" alt="">
-
-
                         </div>
                         <h2 class="text-[#1f2937] text-lg font-bold mt-2">Mango Tree</h2>
                         <p class="text-[#1f2937] text-xs">A fast-growing tropical tree that produces delicious mangoes
@@ -122,15 +128,10 @@
                             Add to Cart
                         </button>
                     </div>
-
                     <!-- 2nd card -->
                     <div class="border p-4 rounded">
                         <div class="bg-[#ededed]">
-                            <!-- <img class="w-full h-40 object-cover rounded bg-gray-200" src="" alt=""> -->
-                            <!-- <img class="w-full h-40 object-cover rounded bg-gray-200" src="" alt=""> -->
                             <img class="w-full h-40 object-cover rounded bg-[#d1d5db]" alt="">
-
-
                         </div>
                         <h2 class="text-[#1f2937] text-lg font-bold mt-2">Mango Tree</h2>
                         <p class="text-[#1f2937] text-xs">A fast-growing tropical tree that produces delicious mangoes
@@ -144,15 +145,10 @@
                             Add to Cart
                         </button>
                     </div>
-
                     <!-- 3rd card -->
                     <div class="border p-4 rounded">
                         <div class="bg-[#ededed]">
-                            <!-- <img class="w-full h-40 object-cover rounded bg-gray-200" src="" alt=""> -->
-                            <!-- <img class="w-full h-40 object-cover rounded bg-gray-200" src="" alt=""> -->
                             <img class="w-full h-40 object-cover rounded bg-[#d1d5db]" alt="">
-
-
                         </div>
                         <h2 class="text-[#1f2937] text-lg font-bold mt-2">Mango Tree</h2>
                         <p class="text-[#1f2937] text-xs">A fast-growing tropical tree that produces delicious mangoes
@@ -166,37 +162,47 @@
                             Add to Cart
                         </button>
                     </div>
-
                 </div>
 
                 <!-- Cart -->
-                <div class="w-[15%]">
-                    <h2 class="text-[#000000] text-xl font-bold mb-2">Your Cart</h2>
-                    <p class="text-sm text-gray-600">InnerHTML</p>
+                <div class="w-full md:w-1/6 mt-4 md:mt-0">
+                    <div class="bg-white p-4 rounded-lg shadow">
+                        <h2 class="text-[#000000] text-xl font-bold mb-4 text-center md:text-left">Your Cart</h2>
+                        <p class="text-sm text-gray-600 text-center py-8">Your cart is empty</p>
+                        <div class="mt-4 border-t pt-4">
+                            <div class="flex justify-between mb-2">
+                                <span>Total:</span>
+                                <span class="font-bold">৳ 0</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+
             </div>
         </div>
     </section>
 
     <!-- about the campaign -->
     <section>
-        <div class="w-[600px] mx-auto m-10">
+        <div class="w-[90%] md:w-[600px] mx-auto my-10">
             <h1 class="text-center text-xl font-bold mb-4">About the Campaign</h1>
-            <div class="flex gap-5 items-center ">
-                <div class="w-1/2">
-                    <img src="./assets/about.png" alt="about">
+            <div class="flex flex-col md:flex-row gap-5 items-center">
+                <div class="w-full md:w-1/2">
+                    <img src="../assets/about.png" alt="about" class="w-full rounded">
                 </div>
 
-                <div class="w-1/2">
-                    <p class="text-[#1f2937] text-xs mb-3">Green Earth is a global tree plantation initiative. We have
-                        already planted over 500,000 trees worldwide. By joining us, you help restore forests, create
-                        habitats for wildlife, and fight climate change.</p>
-                    <ul class="list-disc pl-5 text-[#1f2937] text-xs">
-                        <li>Restoration of natural habitats</li>
-                        <li>Improvement of air quality</li>
-                        <li>Support for local communities</li>
-                    </ul>
-                </div>
+                <div class="w-full md:w-1/2 text-center md:text-left">
+    <p class="text-[#1f2937] text-xs mb-3">
+        Green Earth is a global tree plantation initiative. We have already planted over 500,000 trees worldwide. 
+        By joining us, you help restore forests, create habitats for wildlife, and fight climate change.
+    </p>
+    <ul class="list-disc pl-5 text-[#1f2937] text-xs">
+        <li>Restoration of natural habitats</li>
+        <li>Improvement of air quality</li>
+        <li>Support for local communities</li>
+    </ul>
+</div>
+
             </div>
         </div>
     </section>
@@ -204,18 +210,18 @@
     <!-- Impact part-->
     <section>
         <div class="bg-[#cff0dc]">
-            <div class="w-[1140px] mx-auto mt-10 py-15 text-center">
+            <div class="w-[90%] md:w-[1140px] mx-auto mt-10 py-10 text-center">
                 <h1 class="text-[#1f2937] text-2xl font-bold mb-4">Our Impact</h1>
-                <div class="flex justify-between gap-10">
-                    <div class="bg-[#ffffff] w-full text-[#15803d] py-5 rounded-lg">
+                <div class="flex flex-col sm:flex-row justify-between gap-5">
+                    <div class="bg-[#ffffff] w-full sm:w-1/3 text-[#15803d] py-5 rounded-lg">
                         <h2 class="text-2xl font-bold">500K+</h2>
                         <p class="text-[#1f2937] text-xs p-2">Trees Planted</p>
                     </div>
-                    <div class="bg-[#ffffff] w-full text-[#15803d] py-5 rounded-lg">
+                    <div class="bg-[#ffffff] w-full sm:w-1/3 text-[#15803d] py-5 rounded-lg">
                         <h2 class="text-2xl font-bold">120+</h2>
                         <p class="text-[#1f2937] text-xs p-2">Communities Involved</p>
                     </div>
-                    <div class="bg-[#ffffff] w-full text-[#15803d] py-5 rounded-lg">
+                    <div class="bg-[#ffffff] w-full sm:w-1/3 text-[#15803d] py-5 rounded-lg">
                         <h2 class="text-2xl font-bold">30+</h2>
                         <p class="text-[#1f2937] text-xs p-2">Countries Reached</p>
                     </div>
@@ -225,19 +231,18 @@
     </section>
 
     <!-- Form and copyright-->
-
     <section>
         <div class="bg-[#166534]">
-            <div class="w-[400px] mx-auto py-8 rounded">
+            <div class="w-[90%] md:w-[400px] mx-auto py-8 rounded">
                 <h1 class="text-xl font-bold text-center mb-3">Plant a Tree Today</h1>
                 <div class="bg-[#15803d] p-5 rounded-md shadow-md">
-                    <form action="" method="post" class="text-center">
+                    <form action="" method="post" class="text-center flex flex-col gap-2">
                         <input type="text" placeholder="Enter Your Name"
-                            class="p-1 rounded-lg w-full mb-2 bg-[#ffffff] shadow-md border-none"><br>
+                            class="p-1 rounded-lg w-full bg-[#ffffff] shadow-md border-none">
                         <input type="email" placeholder="Enter Your Email"
-                            class="p-1 rounded-lg w-full mb-2 bg-[#ffffff] shadow-md border-none"><br>
+                            class="p-1 rounded-lg w-full bg-[#ffffff] shadow-md border-none">
                         <input type="number" placeholder="Number of Trees"
-                            class="p-1 rounded-lg w-full mb-2 bg-[#ffffff] shadow-md border-none"><br>
+                            class="p-1 rounded-lg w-full bg-[#ffffff] shadow-md border-none">
                         <button type="submit"
                             class="text-xs font-bold border rounded-full w-full bg-yellow-500 py-2 hover:bg-yellow-600 border-none">
                             Donate Now
@@ -252,7 +257,9 @@
                 </p>
             </div>
         </div>
+
     </section>
+
 </body>
 
 </html>
