--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
 
                 <!-- Cards -->
-                <div id="products-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 w-full md:w-7/12">
+                <div id="card-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 w-full md:w-7/12">
                     
                 </div>
 
