--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 </head>
 
 <body class="bg-[#f0fdf4]">
+    <!-- loading spinner -->
+<div id="spinner" class="hidden fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50">
+    <div class="w-16 h-16 border-4 border-yellow-500 border-t-transparent rounded-full animate-spin"></div>
+</div>
+
 
     <!-- Header -->
 <header class="bg-[#15803d]">
